# Projetos-Vscode

./: .gitignore  README.md
100%Free/DevAgentHub/: README.md  index.html
A HP 12C/: calculadora.bat  calculadora_financeira.py
Criador de Páginas/: index.html  scripts.js
Fincare/: .env.example  README.md
Fincare/backend/: index.js  package.json
Fincare/frontend/: index.html  package.json
JobsBoard/: README.md  docker-compose.yml
JobsBoard/backend/: index.js  package.json
JobsBoard/frontend/: index.html  package.json  vite.config.js
Kanbango/: .gitignore
Kanbango/backend/: index.js  package.json
Kanbango/frontend/: index.html  package.json
LicitaMaster/: .env.example  README.md  main.py  requirements.txt
LicitaMaster/commercial/: __init__.py  commission.py
LicitaMaster/core/: __init__.py  analyzer.py  database.py  scraper.py
LicitaMaster/data/: __init__.py  schema.sql
LicitaMaster/integration/: __init__.py  whatsapp_bot.py
LicitaMaster/legal/: __init__.py  compliance.py
RR98-Agent/: .env.example  README.md  index.js  instalar-tudo.bat  instalar-tudo.cmd  instalar-tudo.ps1  package.json  setup.bat  setup.js
RR98-Agent/branding/: config.js
RR98-Agent/engine/: github-sync.js  protection.js  self-heal.js
RR98-Agent/integration/: hub.js
RR98-Agent/monitoring/: monitor.js
RR98-Agent/public/: index.html
RR98-Agent/routes/: apiRoutes.js  authRoutes.js
RR98-Agent/services/: aiService.js  paymentService.js
RR98-Agent/tax-system/: index.js
RR98-Agent/whatsapp/: index.js
ShopLite/: README.md
ShopLite/backend/: index.js  package.json
ShopLite/frontend/: index.html  package.json  vite.config.js
StockPro/: .env.example  README.md
StockPro/backend/: index.js  package.json
StockPro/frontend/: index.html  package.json
dentarium-ai-enterprise/: .gitignore  LICENSE.txt  README.md  docker-compose.yml
dentarium-ai-enterprise/ai-services/: README.md
dentarium-ai-enterprise/backend/: .env.example  Dockerfile  README.md  pyproject.toml
dentarium-ai-enterprise/backend/app/: config.py  main.py
dentarium-ai-enterprise/backend/app/api/v1/: api.py
dentarium-ai-enterprise/backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  cadcam.py  dashboards.py  files.py  health.py  monitoring.py  ocr.py  spreadsheets.py  users.py  waste.py
dentarium-ai-enterprise/backend/app/core/: __init__.py  logging.py  metrics.py
dentarium-ai-enterprise/backend/app/db/: session.py
dentarium-ai-enterprise/backend/app/models/: __init__.py  user.py
dentarium-ai-enterprise/frontend/: .env.example  Dockerfile  (+2 more)
devhub/: .gitignore  README.md  index.html
roberto-ribeiro-portfolio/: README.md  index.html
studyforge-ai/: LICENSE.txt  README.md  docker-compose.yml
studyforge-ai/backend/: Dockerfile  pyproject.toml
studyforge-ai/backend/app/: main.py
studyforge-ai/backend/app/core/: config.py
(+55 files in other folders)
