[tool.poetry]
name = "dentarium-ai-backend"
version = "1.0.0"
description = "Dentarium AI Enterprise - API Gateway"
authors = ["Roberto Ribeiro <contato@dentarium-ai.enterprise.com.br>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
boto3 = "^1.34.0"
requests = "^2.31.0"
aiofiles = "^23.3.0"
python-magic = "^0.4.27"
pillow = "^10.2.0"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
python-docx = "^1.1.0"
pypdf2 = "^3.0.1"
tesseract = "^0.1.3"
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
scikit-learn = "^1.4.0"
mlflow = "^2.9.0"
celery = "^5.3.6"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-exporter-jaeger = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true